app/assets/stylesheets/_footer.scss
$primaryYellow: #FFC017;
$highlight: linear-gradient(180deg, $primaryYellow 65%, white 65%);

footer.footer {
  display: flex;
  flex-direction: column;
  width: 50vw;
  margin-left: auto;
  margin-right: auto;


  .footer-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;

    .footer-nav {
      display: flex;
      flex-direction: row;
      justify-content: space-evenly;
      width: 40%;
      margin: auto;

      a {
        color: black;
        text-decoration: none;
        transition: 0.5s;
      }

      a:hover {
        background: $highlight;
        transition: 0.5s;
      }
    }
  }

}

